# civitai-cli

./: .gitignore  Cargo.toml  Makefile  README-KO.md  README.md
.github/workflows/: release.yml
docs/: full-refactor-branch-summary.md
src/: cli.rs  cli_download.rs  lib.rs  main.rs  search_sdk.rs  tui.rs
src/api/: client.rs  mod.rs  types.rs
src/config/: app_config.rs  mod.rs
src/download/: manager.rs  mod.rs
src/sdk/: README.md  api.rs  api_types.rs  client.rs  constants.rs  download.rs  image_search.rs  image_search_types.rs  mod.rs  model_search.rs  model_search_types.rs  serde_utils.rs  shared.rs
src/tui/: app.rs  events.rs  image.rs  mod.rs  model.rs  runtime.rs  status.rs  ui.rs  worker.rs
src/tui/app/: bookmarks.rs  downloads.rs  filters.rs  forms.rs  images.rs  liked_models.rs  models.rs  storage.rs  templates.rs  types.rs
src/tui/events/: actions.rs  artifacts.rs  inputs.rs  messages.rs  mod.rs  modals.rs
src/tui/events/inputs/: mod.rs  modes.rs  tabs.rs
src/tui/ui/: downloads.rs  footer.rs  helpers.rs  images.rs  mod.rs  modals.rs  models.rs  tabs.rs
src/tui/worker/: cache.rs  cover_queue.rs  downloads.rs  images.rs  media.rs  mod.rs
tests/: sdk_api_tests.rs  sdk_download_tests.rs  search_sdk_tests.rs
