[package]
name = "civitai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.32"
image = "0.25.10"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
