[package]
name = "civitai-cli"
version = "1.4.3"
edition = "2024"
description = "Terminal-first Civitai browser and downloader for ComfyUI-focused workflows"
license = "Apache-2.0"
repository = "https://github.com/Bogyie/civitai-cli"
homepage = "https://github.com/Bogyie/civitai-cli"

[lib]
name = "civitai_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.32"
html2text = "0.16.7"
image = "0.25.10"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
 bincode = { version = "2.0.0", features = ["serde"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }

[package.metadata.deb]
maintainer = "Bogyie"
copyright = "2026, Bogyie"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """\
Terminal-first Civitai browser and downloader for ComfyUI-focused workflows.
Includes model browsing, image feed browsing, bookmarking, caching, and download management.
"""
assets = [
  ["target/release/civitai-cli", "usr/bin/civitai-cli", "755"],
  ["README.md", "usr/share/doc/civitai-cli/README.md", "644"],
  ["README-KO.md", "usr/share/doc/civitai-cli/README-KO.md", "644"],
  ["LICENSE", "usr/share/doc/civitai-cli/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "Terminal-first Civitai browser and downloader"
license = "Apache-2.0"
assets = [
  { source = "target/release/civitai-cli", dest = "/usr/bin/civitai-cli", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/civitai-cli/README.md", mode = "644", doc = true },
  { source = "README-KO.md", dest = "/usr/share/doc/civitai-cli/README-KO.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/licenses/civitai-cli/LICENSE", mode = "644", doc = true },
]
